--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@ trained_models
 data
 saved_images
 !face/extractors/models
+!face/trained_models/base_model.model
 vqa/modified_model/caffe
 vqa/modified_model/experiments
 vqa/modified_model/faster_lib
