--- a/.gitignore
+++ b/.gitignore
@@ -9,7 +9,7 @@ vqa/modified_model/caffe
 vqa/modified_model/experiments
 vqa/modified_model/faster_lib
 vqa/modified_model/stored_models
-server/temp.jpg
+captured.jpg
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
